general refactor and renderization of the first hexagon from browser coordinate

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -1,9 +1,8 @@
-<html layout:decorator="layout">
 
+<html layout:decorator="layout">
   <div layout:fragment="content">
 
-      <h1>Enfia aki no losangão</h1>
+      <div id="map"></div>
 
   </div>
-
 </html>
