--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,11 +14,15 @@
   <!-- Bootstrap core CSS -->
   <link rel='stylesheet' href='/webjars/bootstrap/3.3.5/css/bootstrap.min.css'/>
   <link href="/css/sticky-footer-navbar.css" rel="stylesheet"/>
+  <link href="/css/starter-template.css" rel="stylesheet"/>
+
+
   <script src="/webjars/jquery/2.1.4/jquery.min.js"></script>
   <script src="/webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="/webjars/angularjs/1.4.7/angular.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/master_controller.js"></script>
+  <script src="/js/hexagon.js"></script>
   <!--<script src="/js/project_controller.js"></script>-->
 </head>
 
@@ -92,7 +96,7 @@
           <p class="text-muted">Place sticky footer content here.</p>
       </div>
     </footer>
-
+    <script aysnc="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyIU_j71xa3FfnjTncf71vw-2N-I2B3_c&amp;signed_in=true&amp;callback=bootstrap"></script>
   </body>
 
 </html>
